Fixed capitalization in file names for consistency on GitHub.

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <!-- Title of the webpage -->
     <title>Mario Runner Game</title>
     <!-- Link to the external CSS file -->
-    <link rel="stylesheet" href="./CSS/Style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <!-- Container for the entire content -->
@@ -50,6 +50,6 @@
     </div>
 
     <!-- Script tag linking to the JavaScript file -->
-    <script src="./JS/Script.js"></script>
+    <script src="./JS/script.js"></script>
   </body>
 </html>
